--- a/index.html
+++ b/index.html
@@ -1,6 +1,8 @@
 <head>
-  <title>codebreakers</title>
+	<title>Codebreaker</title>
 </head>
+
 <body>
-  <h1>Codebreakers</h1>
+	<h1>codebreaker</h1>
+	<h2><marquee>This page is under construction</marquee></h2>
 </body>
