--- a/index.html
+++ b/index.html
@@ -5,5 +5,5 @@
 <body>
 	<h1>codebreaker</h1>
 	<h2><marquee>This page is under construction</marquee></h2>
-	
+	<img src="./maine-coon-694730_1920.jpg">
 </body>
