--- a/index.html
+++ b/index.html
@@ -5,5 +5,6 @@
 <body>
 	<h1>codebreaker</h1>
 	<h2><marquee>This page is under construction</marquee></h2>
+	<h4>more stuff will be coming soon</h4>
 	<img src="maine-coon-694730_1920.jpg" alt="pic of void" width="40%">
 </body>
