--- a/index.html
+++ b/index.html
@@ -6,6 +6,6 @@
 	<h1>codebreaker</h1>
 	<h2><marquee>This page is under construction</marquee></h2>
 	<h4>more stuff will be coming soon</h4>
-	<h4>look, that's our mascot, void the cat &#2193; </h4>
+	<h4>look, this is our mascot, void the cat 😼 </h4>
 	<img src="maine-coon-694730_1920.jpg" alt="pic of void" width="40%">
 </body>
